sunuo (0.3.2) unstable; urgency=low

  * implemented a main loop profiler
  * refuse to load objects with serial -1
  * added legacy scripts
    - blank keys should not be able to unlock doors with KeyValue 0 (patch
      from Kai Sassmannshausen)
    - use log4net for logging

 --

sunuo (0.3.1) unstable; urgency=low

  * optimizations in the serialization code
    - cache position in BinaryFileWriter
    - sealed the serialization classes
    - enlarged BinaryFileWriter's buffer to 32kB
  * removed BinaryFileWriter.UnderlyingStream
  * BinaryFileWriter.Flush() is private
  * Mobile: better SkillMod==null handling

 -- Max Kellermann <max@duempel.org>  Wed,  8 Feb 2006 23:26:45 +0100

sunuo (0.3.0) unstable; urgency=low

  * distribute log4net.dll
  * removed the --logfile option
  * use log4net in exception handlers and more
  * load legacy scripts from local/src and local/lib if present
  * moved main BaseDirectory declaration to Config
  * configure config file and base directory on the command line
  * command line arguments are no longer case insensitive
  * understand "--debug", "--profile", "--service"
  * added directories to Config:
    - ConfigDirectory = BaseDirectory + "/Data"
    - SaveDirectory = BaseDirectory + "/Saves"
    - BackupDirectory = BaseDirectory + "/Backup"
  * moved bootstrapping code to Bootstrap.cs
  * change to base directory
  * GameServerListConfig.GameServers returns IList
  * removed zlib workaround which should be in scripts
  * MultiConOut is a dummy now that log4net is being used
  * disable console in service mode
  * added Config.Features
    - disable-context-menus
    - prefer-ascii
    - delocalize
    - oldschool
    - disable-tile-patch
    - age-of-shadows, samurai-empire
  * support StringQuery
  * Config.MultiThreading renamed to Config.Features["multi-threading"]
  * moved config classes to namespace Server.Config
  * Config.GameServerList implements IEnumerable