@@ -6,6 +6,7 @@ sunuo (0.3.2) unstable; urgency=low
     - blank keys should not be able to unlock doors with KeyValue 0 (patch
       from Kai Sassmannshausen)
     - use log4net for logging
+    - removed Address from ServerList
 
  --
 
